# fastapi-sample

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  pyproject.toml
app/: container.py  main.py
app/common/: datastructures.py  enums.py  exceptions.py
app/core/: __init__.py  annotation.py  app.py  base.py  config.py  context.py  di.py  exceptions.py  fastapi_.py  log.py
app/core/_internal/: __init__.py  _configure.py  _context.py
app/core/db/: __init__.py  mixins.py  orm.py  types.py
app/core/framework/: __init__.py
app/core/var/: __init__.py  config.py  context.py
app/core/var/_internal/: _configure.py  _context.py
app/domain/account/: __init__.py  exceptions.py
app/domain/account/dto/: __init__.py  account_self.py  auth.py
app/domain/account/entity/: account.py
app/domain/account/repo/: __init__.py  account.py
app/domain/account/service/: __init__.py  account_self.py  auth.py
app/domain/user/: __init__.py  exceptions.py
app/domain/user/dto/: __init__.py  user_self.py
app/domain/user/entity/: user.py
app/domain/user/repo/: __init__.py  user_repo.py
app/domain/user/service/: __init__.py  auth.py  auth_service.py  user_self.py  user_self_service.py
app/handler/rest/: __init__.py
app/handler/rest/depends/: account.py  user.py  user_depends.py
app/handler/rest/endpoints/: __init__.py  account.py  healthcheck.py  user.py
app/handler/rest/middlewares/: __init__.py  context.py
tests/core/: test_context.py
tests/core/db/: test_orm.py
tests/handler/rest/: test_healthcheck.py
